# ambient-expense-agent

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  agents-cli-manifest.yaml  demo_script.txt  pyproject.toml  scratch.py  test.py  test_prompt_injection.py
.agents/: CONTEXT.md  settings.json
.agents/skills/expense-fraud-detection/: SKILL.md
.agents/skills/stride-threat-model/: SKILL.md
expense_agent/: agent.py  config.py  fast_api_app.py
expense_agent/.adk/: session.db
features/: expense_approval.feature
tests/: test_agent.py
tests/eval/: eval_config.yaml  generate_traces.py
tests/eval/datasets/: basic-dataset.json
