[project]
name = "ambient-expense-agent"
version = "0.1.0"
description = "Ambient Expense Agent ADK 2.0"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.0.0a0",
    "google-genai",
    "pydantic",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "pytest",
    "mcp>=1.28.1",
    "pre-commit>=4.6.0",
    "semgrep>=1.79.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["expense_agent"]
